Начинаю разметку и стилизацию списка преимуществ в первом экране

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Заголовок страницы</title>
   <meta name="description" content="Краткое описание страницы">
 
@@ -13,7 +14,91 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="wrapper">
 
+    </div>
+  </header>
+  <main class="main">
+    <section class="section first-screen promo">
+      <div class="wrapper">
+
+        <h2 class="title">Установка и ремонт пластиковых окон в Краснодаре</h2>
+        <a href="#" class="button">Вызвать специалиста бесплатно</a>
+
+        <ul class="promo__list list-reset">
+          <li class="promo__item promo__item--car">Бесплатный выезд специалиста в Краснодаре</li>
+          <li class="promo__item promo__item--folder">Работаем только по фиксированным ценам</li>
+          <li class="promo__item promo__item--time">Отремонтируем окна уже сегодня</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="section when-repairs-needed">
+      <div class="wrapper">
+        <h2 class="title">Когда необходим ремонт окон?</h2>
+      </div>
+    </section>
+
+    <section class="section calculate-cost">
+      <div class="wrapper">
+        <h2 class="title">Рассчитать стоимость ремонта бесплатно</h2>
+      </div>
+    </section>
+
+    <section class="section our-services">
+      <div class="wrapper">
+        <h2 class="title">Наши услуги</h2>
+      </div>
+    </section>
+
+    <section class="section get-windows">
+      <div class="wrapper">
+        <h2 class="title">Нужны новые окна с установкой?</h2>
+      </div>
+    </section>
+
+    <section class="section choose-us">
+      <div class="wrapper">
+        <h2 class="title">Почему стоит выбрать нас</h2>
+      </div>
+    </section>
+
+    <section class="section portfolio">
+      <div class="wrapper">
+        <h2 class="title">Некоторые из наших работ</h2>
+      </div>
+    </section>
+
+    <section class="section get-discount">
+      <div class="wrapper">
+        <h2 class="title">Получите скидку 10% при заказе сегодня</h2>
+      </div>
+    </section>
+
+    <section class="section reviews">
+      <div class="wrapper">
+        <h2 class="title">Отзывы наших клиентов</h2>
+      </div>
+    </section>
+
+    <section class="section faq">
+      <div class="wrapper">
+        <h2 class="title">Часто задаваемые вопросы</h2>
+      </div>
+    </section>
+
+    <section class="section get-diagnostics">
+      <div class="wrapper">
+        <h2 class="title">Заказать бесплатную диагностику окон</h2>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <div class="wrapper"></div>
+  </footer>
 </body>
 
 </html>
